--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PremiumLott</title>
 
-  <!-- Fuente y iconos -->
+  <!-- Fuente e iconos -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -59,7 +59,6 @@
     }
 
     body::after {
-      /* ligera capa oscura para que todo se lea bien */
       content: "";
       position: fixed;
       inset: 0;
@@ -81,306 +80,7 @@
       }
     }
 
-    /* Layout general */
     .page-wrapper {
       max-width: 1200px;
       margin: 0 auto;
-      padding: 1.5rem 1.5rem 2.5rem;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-
-    /* Header */
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 1rem;
-      margin-bottom: 3rem;
-    }
-
-    .brand {
-      display: flex;
-      align-items: center;
-      gap: 0.75rem;
-    }
-
-    .brand img {
-      height: 40px;
-      width: auto;
-      display: block;
-    }
-
-    .brand span {
-      font-weight: 600;
-      letter-spacing: 0.08em;
-      font-size: 0.85rem;
-      text-transform: uppercase;
-      opacity: 0.8;
-    }
-
-    .header-actions {
-      display: flex;
-      align-items: center;
-      gap: 0.75rem;
-    }
-
-    .btn {
-      border: 0;
-      border-radius: 999px;
-      padding: 0.5rem 1.4rem;
-      font-size: 0.9rem;
-      font-weight: 600;
-      cursor: pointer;
-      transition: transform 0.15s ease, box-shadow 0.15s ease, background 0.15s ease, color 0.15s ease;
-      white-space: nowrap;
-    }
-
-    .btn-outline {
-      background: rgba(0,0,0,0.65);
-      color: var(--white);
-      border: 1px solid rgba(255,255,255,0.3);
-      box-shadow: 0 0 0 1px rgba(0,0,0,0.4);
-    }
-
-    .btn-outline:hover {
-      background: rgba(255,255,255,0.08);
-      transform: translateY(-1px);
-      box-shadow: 0 6px 14px rgba(0,0,0,0.6);
-    }
-
-    .btn-primary {
-      background: linear-gradient(135deg, var(--yellow), var(--orange));
-      color: #111;
-      box-shadow: 0 10px 24px rgba(0,0,0,0.65);
-    }
-
-    .btn-primary:hover {
-      transform: translateY(-1px);
-      box-shadow: 0 12px 30px rgba(0,0,0,0.75);
-    }
-
-    /* Hero central */
-    main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      gap: 2.5rem;
-    }
-
-    .hero-logo {
-      position: relative;
-      padding: 1.5rem 2.5rem;
-      border-radius: 1.5rem;
-      background: rgba(0,0,0,0.75);
-      box-shadow:
-        0 0 0 1px rgba(255,255,255,0.06),
-        0 18px 40px rgba(0,0,0,0.9),
-        0 0 60px rgba(247,166,35,0.65);
-    }
-
-    .hero-logo img {
-      max-width: min(100%, 380px);
-      height: auto;
-      display: block;
-    }
-
-    .hero-text {
-      max-width: 600px;
-      margin: 0 auto;
-      font-size: 0.95rem;
-      line-height: 1.6;
-      opacity: 0.85;
-    }
-
-    /* Logos de juegos */
-    .games-logos {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-      gap: 1.5rem;
-      align-items: center;
-      width: 100%;
-      margin-top: 0.5rem;
-    }
-
-    .game-card {
-      background: rgba(0,0,0,0.7);
-      border-radius: 1rem;
-      padding: 0.9rem 1rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 10px 24px rgba(0,0,0,0.8);
-      border: 1px solid rgba(255,255,255,0.06);
-      backdrop-filter: blur(8px);
-      transition: transform 0.18s ease, box-shadow 0.18s ease, border-color 0.18s ease;
-    }
-
-    .game-card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 18px 36px rgba(0,0,0,0.9);
-      border-color: rgba(255,197,43,0.6);
-    }
-
-    .game-card img {
-      max-width: 170px;
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-
-    /* Footer */
-    footer {
-      margin-top: 2rem;
-      padding-top: 1.3rem;
-      border-top: 1px solid rgba(255,255,255,0.12);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 1rem;
-      flex-wrap: wrap;
-      font-size: 0.8rem;
-      opacity: 0.85;
-    }
-
-    .social-icons {
-      display: flex;
-      gap: 0.75rem;
-      font-size: 1.15rem;
-    }
-
-    .social-icons a {
-      width: 32px;
-      height: 32px;
-      border-radius: 999px;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      background: rgba(0,0,0,0.7);
-      border: 1px solid rgba(255,255,255,0.25);
-      color: var(--white);
-      text-decoration: none;
-      transition: transform 0.18s ease, box-shadow 0.18s ease, border-color 0.18s ease, background 0.18s ease;
-    }
-
-    .social-icons a:hover {
-      transform: translateY(-2px);
-      border-color: var(--yellow);
-      background: rgba(255,197,43,0.2);
-      box-shadow: 0 8px 22px rgba(0,0,0,0.9);
-    }
-
-    /* Responsive */
-    @media (max-width: 768px) {
-      header {
-        margin-bottom: 2rem;
-      }
-
-      .brand span {
-        display: none;
-      }
-
-      .hero-logo {
-        padding: 1.2rem 1.4rem;
-      }
-
-      .hero-text {
-        font-size: 0.9rem;
-      }
-
-      .header-actions .btn {
-        padding-inline: 1rem;
-      }
-    }
-
-    @media (max-width: 480px) {
-      header {
-        flex-direction: row;
-        align-items: center;
-      }
-
-      .header-actions {
-        gap: 0.5rem;
-      }
-
-      .header-actions .btn {
-        font-size: 0.8rem;
-        padding: 0.4rem 0.9rem;
-      }
-
-      footer {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="page-wrapper">
-    <!-- HEADER -->
-    <header>
-      <div class="brand">
-        <!-- Logo pequeño de PremiumLott (puedes usar el mismo principal pero más chico) -->
-        <img src="Logo PremiumLott.png" alt="PremiumLott" />
-        <span>Juega en modo premium</span>
-      </div>
-
-      <div class="header-actions">
-        <button class="btn btn-outline">Iniciar sesión</button>
-        <button class="btn btn-primary">Regístrate</button>
-      </div>
-    </header>
-
-    <!-- CONTENIDO PRINCIPAL -->
-    <main>
-      <section class="hero">
-        <div class="hero-logo">
-          <!-- Logo principal PremiumLott -->
-          <img src="Logo PremiumLott.png" alt="PremiumLott" />
-        </div>
-
-        <p class="hero-text">
-          Todos tus juegos favoritos en un solo lugar: sorteos, bingo y mucho más,
-          con una experiencia realmente <strong>premium</strong>.
-        </p>
-
-        <!-- Logos de juegos -->
-        <div class="games-logos">
-          <div class="game-card">
-            <img src="Bingo Premium IMG01.png" alt="Bingo Premium" />
-          </div>
-          <div class="game-card">
-            <img src="MegaLott.png" alt="MegaLott" />
-          </div>
-          <div class="game-card">
-            <img src="PremiumGol FN.png" alt="PremiumGol" />
-          </div>
-          <div class="game-card">
-            <img src="PremiumBall.png" alt="PremiumBall" />
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <!-- FOOTER -->
-    <footer>
-      <span>© <span id="year"></span> PremiumLott. Todos los derechos reservados.</span>
-      <div class="social-icons">
-        <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-        <a href="#" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
-        <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-      </div>
-    </footer>
-  </div>
-
-  <script>
-    // Año automático en el footer
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
-</body>
-</html>
+      pad
