--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
   <!-- Iconos -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    crossorigin="anonymous"
-  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
 
   <style>
     :root {
@@ -49,11 +45,11 @@
                   radial-gradient(circle at 100% 100%, rgba(247,166,35,0.4), transparent 55%),
                   linear-gradient(135deg, #000, #151515, #222);
       background-size: 200% 200%;
-      animation: moveGradient 18s ease-in-out infinite alternate;
+      animation: moveBg 18s ease-in-out infinite alternate;
       z-index: -2;
     }
 
-    @keyframes moveGradient {
+    @keyframes moveBg {
       0% { background-position: 0% 0%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 100%; }
@@ -126,7 +122,7 @@
       z-index: 5;
     }
 
-    /* LOGO SIN RECUADRO */
+    /* LOGO PRINCIPAL */
     .hero-logo img {
       max-width: 420px;
       width: 100%;
@@ -134,32 +130,45 @@
       display: block;
     }
 
-    /* LOGOS DE JUEGOS */
-    .games-logos {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-      gap: 1.5rem;
+    /* ESFERAS 3D ANIMADAS */
+    .sphere-row {
       width: 100%;
+      overflow: hidden;
+      margin-top: 2rem;
+      position: relative;
     }
 
-    .game-card {
-      background: rgba(0,0,0,0.65);
-      padding: 0.9rem 1rem;
-      border-radius: 1rem;
+    .sphere-track {
+      display: flex;
+      gap: 2rem;
+      animation: moveLeft 18s linear infinite;
+    }
+
+    @keyframes moveLeft {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-50%); }
+    }
+
+    .sphere {
+      width: 150px;
+      height: 150px;
+      min-width: 150px;
+      background: radial-gradient(circle at 30% 30%, #ffffff40, #000000ee);
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      box-shadow:
+        inset 0 8px 12px rgba(255,255,255,0.25),
+        inset 0 -10px 18px rgba(0,0,0,0.6),
+        0 10px 25px rgba(0,0,0,0.7);
       border: 1px solid rgba(255,255,255,0.08);
-      backdrop-filter: blur(8px);
-      transition: 0.2s ease;
     }
 
-    .game-card:hover {
-      transform: translateY(-4px);
-      border-color: var(--yellow);
-    }
-
-    .game-card img {
-      max-width: 170px;
-      width: 100%;
-      display: block;
+    .sphere img {
+      width: 70%;
+      height: auto;
+      object-fit: contain;
     }
 
     /* FOOTER */
@@ -213,24 +222,31 @@
 
     <!-- MAIN -->
     <main>
+
+      <!-- LOGO PRINCIPAL -->
       <div class="hero-logo">
         <img src="img/Logo-PremiumLott-1.png" alt="PremiumLott">
       </div>
 
-      <div class="games-logos">
-        <div class="game-card">
-          <img src="img/Bingo Premium IMG01.png" alt="Bingo Premium">
-        </div>
-        <div class="game-card">
-          <img src="img/MegaLott.png" alt="MegaLott">
-        </div>
-        <div class="game-card">
-          <img src="img/PremiumGol FN.png" alt="PremiumGol">
-        </div>
-        <div class="game-card">
-          <img src="img/PremiumBall.png" alt="PremiumBall">
+      <!-- PASARELA DE ESFERAS -->
+      <div class="sphere-row">
+        <div class="sphere-track">
+
+          <!-- Logos -->
+          <div class="sphere"><img src="img/Bingo Premium IMG01.png" alt="Bingo Premium"></div>
+          <div class="sphere"><img src="img/MegaLott.png" alt="MegaLott"></div>
+          <div class="sphere"><img src="img/PremiumGol FN.png" alt="PremiumGol"></div>
+          <div class="sphere"><img src="img/PremiumBall.png" alt="PremiumBall"></div>
+
+          <!-- Copia extra para loop infinito -->
+          <div class="sphere"><img src="img/Bingo Premium IMG01.png" alt="Bingo Premium"></div>
+          <div class="sphere"><img src="img/MegaLott.png" alt="MegaLott"></div>
+          <div class="sphere"><img src="img/PremiumGol FN.png" alt="PremiumGol"></div>
+          <div class="sphere"><img src="img/PremiumBall.png" alt="PremiumBall"></div>
+
         </div>
       </div>
+
     </main>
 
     <!-- FOOTER -->
@@ -244,6 +260,7 @@
         <a href="#"><i class="fab fa-youtube"></i></a>
       </div>
     </footer>
+
   </div>
 
   <script>
