Refactor sphere styles and update logo sources
Updated sphere styles and changed logo image paths.

--- a/index.html
+++ b/index.html
@@ -153,16 +153,16 @@
       width: 150px;
       height: 150px;
       min-width: 150px;
-      background: radial-gradient(circle at 30% 30%, #ffffff40, #000000ee);
       border-radius: 50%;
       display: flex;
       justify-content: center;
       align-items: center;
+      background: radial-gradient(circle at 30% 25%, rgba(255,255,255,0.08), #020202f5);
       box-shadow:
-        inset 0 8px 12px rgba(255,255,255,0.25),
-        inset 0 -10px 18px rgba(0,0,0,0.6),
-        0 10px 25px rgba(0,0,0,0.7);
-      border: 1px solid rgba(255,255,255,0.08);
+        inset 0 6px 10px rgba(255,255,255,0.12),
+        inset 0 -12px 18px rgba(0,0,0,0.8),
+        0 10px 24px rgba(0,0,0,0.85);
+      border: 1px solid rgba(255,255,255,0.06);
     }
 
     .sphere img {
@@ -232,17 +232,19 @@
       <div class="sphere-row">
         <div class="sphere-track">
 
-          <!-- Logos -->
-          <div class="sphere"><img src="img/Bingo Premium IMG01.png" alt="Bingo Premium"></div>
-          <div class="sphere"><img src="img/MegaLott.png" alt="MegaLott"></div>
-          <div class="sphere"><img src="img/PremiumGol FN.png" alt="PremiumGol"></div>
-          <div class="sphere"><img src="img/PremiumBall.png" alt="PremiumBall"></div>
+          <!-- Logos (carpeta img/logos) -->
+          <div class="sphere"><img src="img/logos/Logo Bingo Premium.png" alt="Bingo Premium"></div>
+          <div class="sphere"><img src="img/logos/Logo MegaLott.png" alt="MegaLott"></div>
+          <div class="sphere"><img src="img/logos/Logo PremiumBall.png" alt="PremiumBall"></div>
+          <div class="sphere"><img src="img/logos/Logo PremiumGol.png" alt="PremiumGol"></div>
+          <div class="sphere"><img src="img/logos/Logo Raspaditas Premium.png" alt="Raspaditas Premium"></div>
 
           <!-- Copia extra para loop infinito -->
-          <div class="sphere"><img src="img/Bingo Premium IMG01.png" alt="Bingo Premium"></div>
-          <div class="sphere"><img src="img/MegaLott.png" alt="MegaLott"></div>
-          <div class="sphere"><img src="img/PremiumGol FN.png" alt="PremiumGol"></div>
-          <div class="sphere"><img src="img/PremiumBall.png" alt="PremiumBall"></div>
+          <div class="sphere"><img src="img/logos/Logo Bingo Premium.png" alt="Bingo Premium"></div>
+          <div class="sphere"><img src="img/logos/Logo MegaLott.png" alt="MegaLott"></div>
+          <div class="sphere"><img src="img/logos/Logo PremiumBall.png" alt="PremiumBall"></div>
+          <div class="sphere"><img src="img/logos/Logo PremiumGol.png" alt="PremiumGol"></div>
+          <div class="sphere"><img src="img/logos/Logo Raspaditas Premium.png" alt="Raspaditas Premium"></div>
 
         </div>
       </div>
