--- a/index.html
+++ b/index.html
@@ -136,16 +136,16 @@
       overflow: hidden;
       margin-top: 2.5rem;
       position: relative;
-      padding: 40px 0; /* evita el corte de sombras */
+      padding: 40px 0; /* evita recorte de sombras */
     }
 
-    /* Fade lateral */
+    /* Fade lateral totalmente transparente */
     .sphere-row::before,
     .sphere-row::after {
       content: "";
       position: absolute;
       top: 0;
-      width: 120px;
+      width: 140px;
       height: 100%;
       z-index: 3;
       pointer-events: none;
@@ -153,12 +153,12 @@
 
     .sphere-row::before {
       left: 0;
-      background: linear-gradient(to right, rgba(0,0,0,0.95), rgba(0,0,0,0));
+      background: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0));
     }
 
     .sphere-row::after {
       right: 0;
-      background: linear-gradient(to left, rgba(0,0,0,0.95), rgba(0,0,0,0));
+      background: linear-gradient(to left, rgba(0,0,0,0), rgba(0,0,0,0));
     }
 
     .sphere-track {
@@ -173,7 +173,7 @@
       100% { transform: translateX(-50%); }
     }
 
-    /* ESFERAS MÁS OSCURAS — Estilo Premium */
+    /* ESFERAS PREMIUM — más oscuras + brillo + flotación */
     .sphere {
       width: 150px;
       height: 150px;
@@ -182,23 +182,63 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      position: relative;
 
-      /* esfera más oscura */
-      background: radial-gradient(circle at 30% 25%, rgba(255,255,255,0.04), rgba(0,0,0,0.92));
+      /* esfera súper oscura */
+      background: radial-gradient(circle at 35% 30%, rgba(255,255,255,0.03), rgba(0,0,0,0.96));
 
-      /* sombras 3D suaves sin cortes */
+      /* sombras 3D */
       box-shadow:
-        inset 0 4px 8px rgba(255,255,255,0.06),
-        inset 0 -14px 26px rgba(0,0,0,0.85),
-        0 12px 28px rgba(0,0,0,0.85);
+        inset 0 6px 10px rgba(255,255,255,0.06),
+        inset 0 -18px 28px rgba(0,0,0,0.9),
+        0 15px 35px rgba(0,0,0,0.9);
 
-      border: 1px solid rgba(255,255,255,0.05);
+      border: 1px solid rgba(255,255,255,0.03);
+
+      /* Flotación */
+      animation: floatSphere 4.5s ease-in-out infinite;
+      transform-style: preserve-3d;
+      transition: 0.3s ease;
     }
 
+    /* Animación flotante */
+    @keyframes floatSphere {
+      0%, 100% { transform: translateY(0px); }
+      50% { transform: translateY(-12px); }
+    }
+
+    /* Brillo interno animado */
+    .sphere::before {
+      content: "";
+      position: absolute;
+      top: 8%;
+      left: 18%;
+      width: 55%;
+      height: 28%;
+      border-radius: 50%;
+      background: rgba(255,255,255,0.12);
+      filter: blur(18px);
+      animation: shine 3.8s ease-in-out infinite;
+      pointer-events: none;
+    }
+
+    @keyframes shine {
+      0%, 100% { transform: translateX(0) translateY(0) scale(1); opacity: 0.35; }
+      50% { transform: translateX(12px) translateY(8px) scale(1.15); opacity: 0.55; }
+    }
+
+    /* EFECTOS EN HOVER — zoom + giro 3D */
+    .sphere:hover {
+      transform: translateY(-18px) scale(1.08) rotateX(12deg) rotateY(-8deg);
+      z-index: 10;
+    }
+
+    /* Imagen dentro de la esfera */
     .sphere img {
       width: 70%;
       height: auto;
       object-fit: contain;
+      pointer-events: none;
     }
 
     /* FOOTER */
@@ -262,14 +302,14 @@
       <div class="sphere-row">
         <div class="sphere-track">
 
-          <!-- Logos principales desde img/logos -->
+          <!-- Logos desde img/logos -->
           <div class="sphere"><img src="img/logos/Logo Bingo Premium.png" alt="Bingo Premium"></div>
           <div class="sphere"><img src="img/logos/Logo MegaLott.png" alt="MegaLott"></div>
           <div class="sphere"><img src="img/logos/Logo PremiumBall.png" alt="PremiumBall"></div>
           <div class="sphere"><img src="img/logos/Logo PremiumGol.png" alt="PremiumGol"></div>
           <div class="sphere"><img src="img/logos/Logo Raspaditas Premium.png" alt="Raspaditas Premium"></div>
 
-          <!-- Copia para movimiento infinito -->
+          <!-- Copia para loop infinito -->
           <div class="sphere"><img src="img/logos/Logo Bingo Premium.png" alt="Bingo Premium"></div>
           <div class="sphere"><img src="img/logos/Logo MegaLott.png" alt="MegaLott"></div>
           <div class="sphere"><img src="img/logos/Logo PremiumBall.png" alt="PremiumBall"></div>
@@ -287,7 +327,7 @@
 
       <div class="social-icons">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-instinstagram"></i></a>
         <a href="#"><i class="fab fa-tiktok"></i></a>
         <a href="#"><i class="fab fa-youtube"></i></a>
       </div>
