--- a/index.html
+++ b/index.html
@@ -89,15 +89,17 @@
       white-space: nowrap;
     }
 
+    /* Iniciar sesión con marco amarillo */
     .btn-outline {
       background: rgba(0,0,0,0.6);
-      color: white;
-      border: 1px solid rgba(255,255,255,0.25);
+      color: var(--yellow);
+      border: 1px solid var(--yellow);
     }
 
     .btn-outline:hover {
-      background: rgba(255,255,255,0.1);
+      background: rgba(255,255,255,0.08);
       transform: translateY(-2px);
+      box-shadow: 0 0 12px rgba(255,197,43,0.5);
     }
 
     .btn-primary {
@@ -128,18 +130,21 @@
       width: 100%;
       height: auto;
       display: block;
+      margin: 0 auto;
     }
 
     /* PASARELA — ESFERAS 3D MEJORADAS */
     .sphere-row {
-      width: 100%;
+      width: 100vw;              /* ocupa todo el ancho de la pantalla */
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
       overflow: hidden;
       margin-top: 2.5rem;
-      position: relative;
-      padding: 40px 0; /* evita recorte de sombras */
+      padding: 40px 0;           /* evita recorte de sombras */
     }
 
-    /* Fade lateral totalmente transparente */
+    /* Fade lateral totalmente transparente (se mantiene por si sirve para cortes limpios, pero sin color) */
     .sphere-row::before,
     .sphere-row::after {
       content: "";
@@ -149,16 +154,15 @@
       height: 100%;
       z-index: 3;
       pointer-events: none;
+      background: transparent;
     }
 
     .sphere-row::before {
       left: 0;
-      background: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0));
     }
 
     .sphere-row::after {
       right: 0;
-      background: linear-gradient(to left, rgba(0,0,0,0), rgba(0,0,0,0));
     }
 
     .sphere-track {
@@ -184,10 +188,8 @@
       align-items: center;
       position: relative;
 
-      /* esfera súper oscura */
       background: radial-gradient(circle at 35% 30%, rgba(255,255,255,0.03), rgba(0,0,0,0.96));
 
-      /* sombras 3D */
       box-shadow:
         inset 0 6px 10px rgba(255,255,255,0.06),
         inset 0 -18px 28px rgba(0,0,0,0.9),
@@ -195,7 +197,6 @@
 
       border: 1px solid rgba(255,255,255,0.03);
 
-      /* Flotación */
       animation: floatSphere 4.5s ease-in-out infinite;
       transform-style: preserve-3d;
       transition: 0.3s ease;
@@ -233,7 +234,6 @@
       z-index: 10;
     }
 
-    /* Imagen dentro de la esfera */
     .sphere img {
       width: 70%;
       height: auto;
@@ -248,9 +248,11 @@
       border-top: 1px solid rgba(255,255,255,0.1);
       display: flex;
       justify-content: space-between;
+      align-items: center;
       flex-wrap: wrap;
       font-size: 0.8rem;
       z-index: 5;
+      gap: 0.75rem;
     }
 
     .social-icons {
@@ -269,12 +271,47 @@
       justify-content: center;
       align-items: center;
       transition: 0.2s ease;
+      font-size: 0.9rem;
     }
 
     .social-icons a:hover {
       transform: translateY(-3px);
       border-color: var(--yellow);
       background: rgba(255,197,43,0.2);
+    }
+
+    /* --------- VISTA MÓVIL --------- */
+    @media (max-width: 768px) {
+      header {
+        margin-bottom: 2rem;
+      }
+
+      .hero-logo img {
+        max-width: 80%; /* ~20% más pequeño que en escritorio */
+      }
+
+      /* Pasarela más rápida en móvil */
+      .sphere-track {
+        animation: moveLeft 14s linear infinite;
+      }
+
+      /* Footer: iconos arriba y más grandes */
+      footer {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+
+      .social-icons {
+        order: -1; /* mostrar iconos encima del texto */
+        justify-content: center;
+      }
+
+      .social-icons a {
+        width: 40px;
+        height: 40px;
+        font-size: 1.1rem;
+      }
     }
   </style>
 </head>
@@ -327,7 +364,7 @@
 
       <div class="social-icons">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instinstagram"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-tiktok"></i></a>
         <a href="#"><i class="fab fa-youtube"></i></a>
       </div>
